--- a/home.html
+++ b/home.html
@@ -51,15 +51,31 @@
     <main class="main_content">
       <!-- begin firstScreen-->
       <div class="firstScreen">
-        <picture class="firstScreen__bg">
-          <source srcset="img/home-bg.jpg" media="(max-width: 767px)"/><img src="img/home-bg.jpg" alt=""/>
-        </picture>
-        <div class="container_center">
-          <div class="firstScreen__content">
-            <h1 class="firstScreen__title">Бизнес-школа – современный и эффективный формат онлайн-обучения</h1>
-            <div class="firstScreen__sub">Бизнес-школа – современный и эффективный формат <br>онлайн-обучения (Текст 2-3 предложения о школе)</div>
-            <div class="firstScreen__action">
-              <button class="btn btn_success">начать обучение</button>
+        <div class="firstScreen__item">
+          <picture class="firstScreen__bg">
+            <source srcset="img/home-bg.jpg" media="(max-width: 767px)"/><img src="img/home-bg.jpg" alt=""/>
+          </picture>
+          <div class="container_center">
+            <div class="firstScreen__content">
+              <h1 class="firstScreen__title">Бизнес-школа – современный и эффективный формат онлайн-обучения</h1>
+              <div class="firstScreen__sub">Бизнес-школа – современный и эффективный формат <br>онлайн-обучения (Текст 2-3 предложения о школе)</div>
+              <div class="firstScreen__action">
+                <button class="btn btn_success">начать обучение</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="firstScreen__item">
+          <picture class="firstScreen__bg">
+            <source srcset="img/home-bg.jpg" media="(max-width: 767px)"/><img src="img/home-bg.jpg" alt=""/>
+          </picture>
+          <div class="container_center">
+            <div class="firstScreen__content">
+              <h1 class="firstScreen__title">Бизнес-школа – современный и эффективный формат онлайн-обучения</h1>
+              <div class="firstScreen__sub">Бизнес-школа – современный и эффективный формат <br>онлайн-обучения (Текст 2-3 предложения о школе)</div>
+              <div class="firstScreen__action">
+                <button class="btn btn_success">начать обучение</button>
+              </div>
             </div>
           </div>
         </div>
@@ -133,6 +149,7 @@
               <div class="coursesList__action">
                 <button class="btn btn_small" type="button">Записаться</button>
               </div>
+              <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
             </div>
             <div class="coursesList__item">
               <div class="coursesList__head">
@@ -165,6 +182,7 @@
               <div class="coursesList__action">
                 <button class="btn btn_small" type="button">Записаться</button>
               </div>
+              <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
             </div>
             <div class="coursesList__item">
               <div class="coursesList__head">
@@ -197,6 +215,7 @@
               <div class="coursesList__action">
                 <button class="btn btn_small" type="button">Записаться</button>
               </div>
+              <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
             </div>
             <div class="coursesList__item">
               <div class="coursesList__head">
@@ -229,6 +248,7 @@
               <div class="coursesList__action">
                 <button class="btn btn_small" type="button">Записаться</button>
               </div>
+              <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
             </div>
             <div class="coursesList__item">
               <div class="coursesList__head">
@@ -261,6 +281,7 @@
               <div class="coursesList__action">
                 <button class="btn btn_small" type="button">Записаться</button>
               </div>
+              <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
             </div>
             <div class="coursesList__item">
               <div class="coursesList__head">
@@ -293,6 +314,7 @@
               <div class="coursesList__action">
                 <button class="btn btn_small" type="button">Записаться</button>
               </div>
+              <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
             </div>
           </div>
         </div>
