--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <li><a href="st-home.html">ЛК студент - главная</a></li>
           <li><a href="st-courses.html">ЛК студент - курсы</a></li>
           <li><a href="st-single-course.html">ЛК студент - один курс</a></li>
-          <li><a href="st-single-course.html">ЛК студент - один курс 2 колонки</a></li>
+          <li><a href="st-single-course-2.html">ЛК студент - один курс 2 колонки</a></li>
           <li><a href="st-task-edit.html">ЛК студент - Задание (редактирование/заполнение)</a></li>
           <li><a href="st-task-ordered.html">ЛК студент - Задание (на проверке)</a></li>
           <li><a href="st-task-checked.html">ЛК студент - Задание (проверено)</a></li>
