--- a/programm.html
+++ b/programm.html
@@ -90,6 +90,7 @@
             </select>
           </div>
         </div>
+        <div class="coursesTags"><a href="">Подборка Грефа <b>5</b></a><a class="warning" href="">Управление и менеджмент<b>3</b></a><a class="success" href="">IT-технологии<b>8</b></a><a class="danger" href="">Продвижение<b>2</b></a></div>
         <div class="coursesList__row">
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -122,6 +123,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -154,6 +156,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -186,6 +189,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -218,6 +222,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -250,6 +255,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -282,6 +288,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -314,6 +321,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -346,6 +354,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -378,6 +387,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -410,6 +420,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -442,6 +453,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -474,6 +486,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -506,6 +519,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -538,6 +552,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -570,6 +585,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -602,6 +618,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -634,6 +651,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -666,6 +684,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -698,6 +717,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -730,6 +750,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
           <div class="coursesList__item">
             <div class="coursesList__head">
@@ -762,6 +783,7 @@
             <div class="coursesList__action">
               <button class="btn btn_small" type="button">Записаться</button>
             </div>
+            <div class="coursesList__tags"><a href="">Подборка Грефа</a><a class="danger" href="">IT-технологии</a><a class="success" href="">Продвижение</a></div>
           </div>
         </div>
         <!-- begin pagination-->
