--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <li><a href="teachers.html">Преподаватели и спикеры</a></li>
           <li><a href="graduates.html">Выпускники</a></li>
           <li><a href="news.html">Новости</a></li>
+          <li><a href="news-a.html">Новости алтернативная</a></li>
           <li><a href="new.html">Новость</a></li>
           <li><a href="campus.html">Кампус</a></li>
           <li><a href="course.html">Страница курса</a></li>
