--- a/news-a.html
+++ b/news-a.html
@@ -18,9 +18,9 @@
           <ul class="navbar">
             <li class="navbar__item"><a class="navbar__link" href="about.html">О школе</a>
             </li>
-            <li class="navbar__item"><a class="navbar__link" href="news.html">Новости</a>
+            <li class="navbar__item"><a class="navbar__link active" href="news.html">Новости</a>
             </li>
-            <li class="navbar__item"><a class="navbar__link active" href="campus.html">Кампус</a>
+            <li class="navbar__item"><a class="navbar__link" href="campus.html">Кампус</a>
             </li>
             <li class="navbar__item"><a class="navbar__link" href="programm.html">Программы обучения</a>
             </li>
@@ -58,158 +58,74 @@
       </div>
     </header>
     <main class="main_content">
-      <div class="post post_camp">
+      <div class="newsHead">
+        <div class="newsHead__img"><img src="img/news-a.jpg" alt=""/></div>
         <div class="container_center">
               <div class="breadcrumb">
                 <ul>
                   <li><a href="/">Главная страница</a></li>
-                  <li><a href="">Кампус</a></li>
+                  <li><a href="">Новости</a></li>
                 </ul>
               </div>
-          <h1 class="page__title">О нашем Кампусе</h1>
-          <div class="postSlider">
-            <div class="postSlider__item">
-              <div class="postSlider__img"><img src="img/campus.jpg" alt=""/></div>
-              <div class="postSlider__name">Студенты у кампуса</div>
-            </div>
-            <div class="postSlider__item">
-              <div class="postSlider__img"><img src="img/campus.jpg" alt=""/></div>
-              <div class="postSlider__name">Студенты у кампуса</div>
-            </div>
-            <div class="postSlider__item">
-              <div class="postSlider__img"><img src="img/campus.jpg" alt=""/></div>
-              <div class="postSlider__name">Студенты у кампуса</div>
-            </div>
-            <div class="postSlider__item">
-              <div class="postSlider__img"><img src="img/campus.jpg" alt=""/></div>
-              <div class="postSlider__name">Студенты у кампуса</div>
-            </div>
-          </div>
-          <div class="post__content">
-            <h2>Подробнее о нашем кампусе</h2>
-            <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.</p>
-            <p>Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.</p>
-            <p>Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.</p>
-            <p>Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.                </p>
-          </div>
-          <div class="post__gallery">
-            <div class="post__galleryItem"><img src="img/campus-1.jpg" alt=""/></div>
-            <div class="post__galleryItem"><img src="img/campus-2.jpg" alt=""/></div>
-            <div class="post__galleryItem"><img src="img/campus-3.jpg" alt=""/></div>
-            <div class="post__galleryItem"><img src="img/campus-4.jpg" alt=""/></div>
-          </div>
-          <div class="post__video post__video_full">
-            <div class="post__videoItem">
-              <div class="video__wrapper js-youtube" id="OuOXvavAy1c"></div>
+          <div class="newsHead__wrap">
+            <h1 class="page__title">Новости и мероприятия</h1>
+            <div class="newsHead__content">
+              <div class="newsHead__text">Здесь будет текстовое описание что будет в этом разделе. Здесь будет текстовое описание что будет в этом разделе. Здесь будет текстовое описание что будет в этом разделе. </div>
+              <div class="newsParts">
+                <div class="newsParts__title">В этом разделе</div>
+                <div class="newsParts__list"><a href="">События</a><a href="">Новости</a><a href="">Мероприятия</a><a href="">Еще категория</a><a href="">Видео</a></div>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="container_center">
-        <div class="slider__head">
-          <h2 class="page__subtitle">Новости по теме</h2>
-          <div class="slider__arrows">
-            <div class="slick-arrow slick-prev similar__prev"></div>
-            <div class="slick-arrow slick-next similar__next"></div>
-          </div>
-        </div>
-        <!-- begin similarSlider-->
-        <div class="similarSlider">
-          <!-- begin newsList-->
-          <div class="newsList">
-            <div class="newsList__item">
-              <div class="newsList__img"><img src="img/news-1.jpg" alt=""/></div>
-              <div class="newsList__date">15 февраля 2021</div>
-              <div class="newsList__title">Россия вводит удаленку во всех ВУЗах страны</div>
-              <div class="newsList__short">Здесь будет текстовое описание новости которое может быть разной длинны</div>
-              <div class="newsList__more"><a href="new.html">Подробнее</a></div>
-            </div>
-            <div class="newsList__item">
-              <div class="newsList__img"><img src="img/news-2.jpg" alt=""/></div>
-              <div class="newsList__date">15 февраля 2021</div>
-              <div class="newsList__title">ЕГЭ 2021. Изменения</div>
-              <div class="newsList__short">Здесь будет текстовое описание новости которое может быть разной длинны</div>
-              <div class="newsList__more"><a href="new.html">Подробнее</a></div>
-            </div>
-            <div class="newsList__item">
-              <div class="newsList__img"><img src="img/news-3.jpg" alt=""/></div>
-              <div class="newsList__date">15 февраля 2021</div>
-              <div class="newsList__title">В какой ВУЗ лучше поступать?</div>
-              <div class="newsList__short">Здесь будет текстовое описание новости которое может быть разной длинны</div>
-              <div class="newsList__more"><a href="new.html">Подробнее</a></div>
-            </div>
-            <div class="newsList__item">
-              <div class="newsList__img"><img src="img/news-4.jpg" alt=""/></div>
-              <div class="newsList__date">15 февраля 2021</div>
-              <div class="newsList__title">Новое в специальности дизайнера интерфейсов в 2021</div>
-              <div class="newsList__short">Здесь будет текстовое описание новости которое может быть разной длинны</div>
-              <div class="newsList__more"><a href="new.html">Подробнее</a></div>
-            </div>
-            <div class="newsList__item">
-              <div class="newsList__img"><img src="img/news-2.jpg" alt=""/></div>
-              <div class="newsList__date">15 февраля 2021</div>
-              <div class="newsList__title">ЕГЭ 2021. Изменения</div>
-              <div class="newsList__short">Здесь будет текстовое описание новости которое может быть разной длинны</div>
-              <div class="newsList__more"><a href="new.html">Подробнее</a></div>
-            </div>
-            <div class="newsList__item">
-              <div class="newsList__img"><img src="img/news-1.jpg" alt=""/></div>
-              <div class="newsList__date">15 февраля 2021</div>
-              <div class="newsList__title">Россия вводит удаленку во всех ВУЗах страны</div>
-              <div class="newsList__short">Здесь будет текстовое описание новости которое может быть разной длинны</div>
-              <div class="newsList__more"><a href="new.html">Подробнее</a></div>
-            </div>
-            <div class="newsList__item">
-              <div class="newsList__img"><img src="img/news-4.jpg" alt=""/></div>
-              <div class="newsList__date">15 февраля 2021</div>
-              <div class="newsList__title">Новое в специальности дизайнера интерфейсов в 2021</div>
-              <div class="newsList__short">Здесь будет текстовое описание новости которое может быть разной длинны</div>
-              <div class="newsList__more"><a href="new.html">Подробнее</a></div>
-            </div>
-            <div class="newsList__item">
-              <div class="newsList__img"><img src="img/news-3.jpg" alt=""/></div>
-              <div class="newsList__date">15 февраля 2021</div>
-              <div class="newsList__title">В какой ВУЗ лучше поступать?</div>
-              <div class="newsList__short">Здесь будет текстовое описание новости которое может быть разной длинны</div>
-              <div class="newsList__more"><a href="new.html">Подробнее</a></div>
+        <h2 class="page__subtitle">Новости</h2>
+        <div class="newsLinks">
+          <div class="newsLinks__item"><a class="newsLinks__img" href=""><img src="img/news-1.jpg" alt=""/></a>
+            <div class="newsLinks__descr">
+              <div class="newsLinks__date">15 февраля 2021</div>
+              <div class="newsLinks__name">Россия вводит удаленку во всех ВУЗах страны</div>
+              <div class="newsLinks__text">Здесь будет текстовое описание новости которое может быть разной длинны</div>
             </div>
           </div>
-          <!-- end newsList-->
+          <div class="newsLinks__item"><a class="newsLinks__img" href=""><img src="img/news-2.jpg" alt=""/></a>
+            <div class="newsLinks__descr">
+              <div class="newsLinks__date">15 февраля 2021</div>
+              <div class="newsLinks__name">Россия вводит удаленку во всех ВУЗах страны</div>
+              <div class="newsLinks__text">Здесь будет текстовое описание новости которое может быть разной длинны</div>
+            </div>
+          </div>
+          <div class="newsLinks__item"><a class="newsLinks__img" href=""><img src="img/news-3.jpg" alt=""/></a>
+            <div class="newsLinks__descr">
+              <div class="newsLinks__date">15 февраля 2021</div>
+              <div class="newsLinks__name">Россия вводит удаленку во всех ВУЗах страны</div>
+              <div class="newsLinks__text">Здесь будет текстовое описание новости которое может быть разной длинны</div>
+            </div>
+          </div>
+          <div class="newsLinks__item"><a class="newsLinks__img" href=""><img src="img/news-4.jpg" alt=""/></a>
+            <div class="newsLinks__descr">
+              <div class="newsLinks__date">15 февраля 2021</div>
+              <div class="newsLinks__name">Россия вводит удаленку во всех ВУЗах страны</div>
+              <div class="newsLinks__text">Здесь будет текстовое описание новости которое может быть разной длинны</div>
+            </div>
+          </div>
+          <div class="newsLinks__item"><a class="newsLinks__img" href=""><img src="img/news-3.jpg" alt=""/></a>
+            <div class="newsLinks__descr">
+              <div class="newsLinks__date">15 февраля 2021</div>
+              <div class="newsLinks__name">Россия вводит удаленку во всех ВУЗах страны</div>
+              <div class="newsLinks__text">Здесь будет текстовое описание новости которое может быть разной длинны</div>
+            </div>
+          </div>
+          <div class="newsLinks__item"><a class="newsLinks__img" href=""><img src="img/news-2.jpg" alt=""/></a>
+            <div class="newsLinks__descr">
+              <div class="newsLinks__date">15 февраля 2021</div>
+              <div class="newsLinks__name">Россия вводит удаленку во всех ВУЗах страны</div>
+              <div class="newsLinks__text">Здесь будет текстовое описание новости которое может быть разной длинны</div>
+            </div>
+          </div>
         </div>
-        <!-- end similarSlider-->
       </div>
-      <!-- begin contactMap-->
-      <div class="contactMap">
-        <div class="container_center">
-          <div class="contactMap__box">
-            <div class="contactMap__title">Контакты школы</div>
-            <div class="contactMap__list">
-              <ul>
-                <li>123123, Дом Гоголя, Никитский бул., 7А</li>
-                <li>+8 (900) 000 00 00, +8 (900) 000 00 00</li>
-                <li>info@info.ru</li>
-                <li>ИНН: 0001231111</li>
-                <li>ОГРН: 12345678910123</li>
-              </ul>
-            </div>
-            <button class="btn">Написать нам</button>
-          </div>
-        </div>
-        <div class="map" id="map"></div>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4v5N9THMUfeAqGbCXcSSYvf9UnbV5pL8&amp;callback=initMap&amp;libraries=&amp;v=weekly" async="async"></script>
-        <script>
-          let map;
-          
-          function initMap() {
-              map = new google.maps.Map(document.getElementById("map"), {
-                  center: { lat: -34.397, lng: 150.644 },
-                  zoom: 8,
-              });
-          }
-          
-        </script>
-      </div>
-      <!-- end contactMap-->
     </main>
     <footer class="footer">
       <div class="footer__top">
